--- a/template.html
+++ b/template.html
@@ -4,6 +4,11 @@
     <title>Webpack Package</title>
   </head>
   <body>
-    <div id="point"></div>
+    <div id="point">
+      <form>
+        <input>Text</input>
+        <button type='submit'>Button</button>
+      </form>
+    </div>
   </body>
 </html>
