--- a/template.html
+++ b/template.html
@@ -5,36 +5,53 @@
     <link rel="stylesheet" href="./src/style.css">
   </head>
   <body>
-    <section class="container-fluid bg-dark p-5">
+    <div class="fade">
+      <div class="modal hidden" id="modal" tabindex="-1">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header header">
+              <h5 class="modal-title" id='title'>Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body body" id='description'>
+              <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer footer">
+              <button type="button" class="mdl" data='read'>Читать полностью</button>
+              <button type="button" class="mdl" data-dismiss="modal">Закрыть</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <section class="container1">
       <div class="row">
         <div class="block">
           <h1 class="display-3">RSS агрегатор</h1>
-          <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
-          <form class="form">
-            <div class="input-group">
-              <input autofocus="" required="" name="name" aria-label="url" class='form-control' id='input' placeholder="ссылка RSS">
-              <div class="input-group-btn">
-                <button type="submit" aria-label="add" class="btn btn-default">Add</button>
+          <h2 class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
+          <form action="" class="form">
+            <div class="form-row">
+              <div class="col">
+                <input autofocus="" required="" name="name" aria-label="url" class="form-control form-control-lg w-100" id='input' placeholder="ссылка RSS">
+              </div>
+              <div class="col-auto">
+                <button type="submit" aria-label="add" class="button">Add</button>
               </div>
             </div>
           </form>
           <p class="text-muted my-1">Пример: https://ru.hexlet.io/lessons.rss</p>
-          <div class="feedback text-success"></div>
+          <div class="feedback is-valid"></div>
         </div>
       </div>
     </section>
-    <section class="container-fluid p-5"">
+    <section class="container2"">
       <div class="row">
-        <div class="feeds">
-          <h2>Фиды</h2>
-          <ul class="ulFeed"></ul>
-        </div>
+        <div class="feeds"></div>
       </div>
       <div class="row">
-        <div class="posts">
-          <h2>Посты</h2>
-          <ul class="ulPosts" id='posts'></ul>
-        </div>
+        <div class="posts"></div>
       </div>
     </section>
   </body>
