--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <input autofocus="" required="" name="name" aria-label="url" class="form-control form-control-lg w-100" id='input' placeholder="ссылка RSS">
               </div>
               <div class="col-auto">
-                <button type="submit" aria-label="add" class="button">Add</button>
+                <button type="submit" aria-label="add" class="button"'>Add</button>
               </div>
             </div>
           </form>
