--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                               <input autofocus name="url" aria-label="url"
                                     class="form-control form-control-lg w-100" placeholder="ссылка RSS"></div>
                             <div class="col-auto"><button type="submit" aria-label="add"
-                                    class="btn btn-lg btn-primary px-sm-5">Add</button></div>
+                                    class="btn btn-lg btn-primary px-sm-5">Просмотр</button></div>
                         </div>
                     </form>
                     <p class="text-muted my-1">Пример: https://ru.hexlet.io/lessons.rss</p>
