--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title"></h5><button type="button" class="close" data-dismiss="modal"
+                    <h5 class="modal-title"></h5><button type="button" class="close" data-bs-dismiss="modal"
                         aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body"></div>
                 <div class="modal-footer"><a class="btn btn-primary full-article" role="button" target="_blank"
                         rel="noopener noreferrer">Читать полностью </a><button type="button" class="btn btn-secondary"
-                        data-dismiss="modal">Закрыть</button></div>
+                        data-bs-dismiss="modal">Закрыть</button></div>
             </div>
         </div>
     </div>
@@ -28,8 +28,8 @@
                 <div class="col-md-10 col-lg-8 mx-auto text-white">
                     <h1 class="display-3">RSS агрегатор</h1>
                     <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
-                    <form action="" class="rss-form">
-                        <div class="form-row">
+                    <form action="" class="rss-form text-body">
+                        <div class="row">
                             <div class="col">
                               <input autofocus name="url" aria-label="url"
                                     class="form-control form-control-lg w-100" placeholder="ссылка RSS"></div>
